Everything is working, time for styling

--- a/_posts/2011-10-13-truman-toland-1922-2011.markdown
+++ b/_posts/2011-10-13-truman-toland-1922-2011.markdown
@@ -3,7 +3,7 @@ layout: post
 title: Truman Toland, 1922-2011
 ---
 
-![Truman Toland](https://s3.amazonaws.com/zachphillips/truman.jpg)]
+![Truman Toland](https://s3.amazonaws.com/zachphillips/truman.jpg)
 
 My grandpa, Truman Toland, died yesterday, at the age of 89. Healthy and self-sufficient to (almost) the very end, he was a great artist and a great guy.
 
